# study-apitesting

./: .travis.yml  pyproject.toml
wangquan_apitest/: test_sore.py
